--- a/package.json
+++ b/package.json
@@ -22,20 +22,21 @@
         "@aws-sdk/client-dynamodb": "^3.x",
         "@aws-sdk/lib-dynamodb": "^3.x",
         "@google-cloud/storage": "^7.x",
-        "discord.js": "^14.x",
-        "grammy": "^1.x",
-        "csv-writer": "^1.6.0",
-        "dotenv": "^16.x",
-        "winston": "^3.x",
-        "rate-limiter-flexible": "^3.x",
+        "aws-sdk": "^2.1692.0",
         "bad-words": "^3.x",
+        "csv-writer": "^1.6.0",
+        "discord.js": "^14.x",
+        "dotenv": "^16.x",
         "express": "^4.x",
-        "validator": "^13.x",
         "glob": "^10.x",
-        "rimraf": "^5.x",
-        "uuid": "^9.x",
+        "grammy": "^1.x",
         "lru-cache": "^10.x",
-        "undici": "^6.x"
+        "rate-limiter-flexible": "^3.x",
+        "rimraf": "^5.x",
+        "undici": "^6.x",
+        "uuid": "^9.x",
+        "validator": "^13.x",
+        "winston": "^3.x"
     },
     "devDependencies": {
         "@types/jest": "^29.x",
